# simple-quart-app

./: README.md  pyproject.toml
src/simple_quart_app/: __init__.py
