[project]
name = "simple-quart-app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Quart (>=0.20.0,<0.21.0)"
]

[tool.poetry]
packages = [{include = "simple_quart_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.simple_quart_app:run"
